@@ -65,7 +65,7 @@ public class CommandMessages implements LocaleReader {
         return StringUtils.formatToString(CONFIG.getString("prefix", "") + res);
     }
 
-    private final Locale locale = new Locale("en", "US");
+    private final Locale locale = Locale.of("en", "US");
 
     @Override
     public Locale getLocale() {
